test/expected/bogus_path.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "data/*/doesnotexist"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "data/*/doesnotexist"
]
shit: 1:6: error: No matches for the glob pattern 'data/*/doesnotexist'.
     1 |  echo data/*/doesnotexist
       |       ^~~~~~~~~~~~~~~~~~~ here.
